--- a/Assets/pag-planos.css
+++ b/Assets/pag-planos.css
@@ -29,7 +29,7 @@ header {
 /* Estilos do logo */
 .logo {
     position: relative;
-    left: 110px;
+    left: 80px;
 }
 
 /* Estilos da barra de navegação */
@@ -111,9 +111,9 @@ main{
 /* Estilos para o botão body */
 .botao-body {
     border: none;
-    position: relative;
+    position: absolute;
     text-align: center;
-    top: 35%;
+    top: 80%;
     border-radius: 10px;
     padding: 15px;
     padding-left: 100px;
@@ -149,11 +149,16 @@ h2 {
     color: rgb(255, 255, 255);
 }
 
+.secao4 {
+    position: absolute;
+    top: -100px;
+    left: -80px;
+}
+
 /* Estilos para a seção de planos */
 .secao4-div {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     padding: 160px;
     text-align: center;
     width: 78%;
@@ -192,6 +197,10 @@ h2 {
     font-size: 300%;
 }
 
+p {
+    font-size: 18px;
+}
+
 /* Estilos para a descrição dos planos */
 .descricao1, .descricao2, .descricao3 {
     position: relative;
@@ -204,6 +213,7 @@ h2 {
 
 /* Estilos para o rodapé */
 footer {
+    margin-top: 50%;
     font-family: 'Roboto', sans-serif;
     width: 100vw;
     text-align: center;
