--- a/Assets/CSS/dados-compra.css
+++ b/Assets/CSS/dados-compra.css
@@ -118,8 +118,8 @@ main{
     left: 20px;
 }
 
-/* Estilos da seção de login principal */
-.login-principal {
+/* Estilos da seção dados compras principal */
+.dadoscompras-principal {
     width: 100vw;
     height: 100vh;
     background: #201b2c;
@@ -128,7 +128,7 @@ main{
     align-items: center;
 }
 
-/* Estilos da seção de login com movimentação */
+/* Estilos da seção de dados compras com movimentação */
 .movimentar {
     margin-top: 200px;
     flex-direction: column;
@@ -137,29 +137,8 @@ main{
     align-items: center;
 }
 
-/* Estilos da seção esquerda de login */
-.left-login {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.left-login>h1 {
-    font-size: 2vw;
-    color: #77ffc0;
-    margin-bottom: 20px;
-}
-
-/* Estilos da imagem à esquerda do login */
-.left-login-image {
-    width: 35vw;
-}
-
-/* Estilos da seção direita de login */
-.right-login {
+/* Estilos da seção direita de dados compras */
+.right-dadoscompras {
     width: 50vw;
     height: 100vh;
     display: flex;
@@ -168,8 +147,8 @@ main{
     margin-bottom: 9px;
 }
 
-/* Estilos do cartão de login */
-.card-login {
+/* Estilos do cartão de dados compras */
+.card-dadoscompras {
     width: 60%;
     display: flex;
     justify-content: center;
@@ -181,7 +160,7 @@ main{
     box-shadow: 0 10px 40px #00000056;
 }
 
-.card-login>h1 {
+.card-dadoscompras>h1 {
     color: #00ff88;
     font-weight: 800;
     margin: 0;
@@ -225,8 +204,8 @@ main{
     padding: 20px 1px 1px;
 }
 
-/* Estilos do botão de login */
-.btn-login {
+/* Estilos do botão de dados compras */
+.btn-dadoscompras {
     width: 100%;
     padding: 16px 0;
     margin: 25px;
@@ -248,12 +227,6 @@ main{
     flex-direction: row;
     gap: 30px;
     color: #f0ffffde;
-}
-
-/* Estilos do link do rodapé */
-.pagina-login {
-    text-decoration: none;
-    color: #00ff88;
 }
 
 /* Estilos do link de cor entre */
@@ -281,36 +254,22 @@ footer>h2 {
 }
 
 @media only screen and (max-width: 950px) {
-    .card-login {
+    .card-dadoscompras {
         width: 85%;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .login-principal {
+    .dadoscompras-principal {
         flex-direction: column;
-
     }
 
-    .left-login>h1 {
-        display: none;
-    }
-
-    .left-login {
+    .right-dadoscompras {
         width: 100%;
         height: auto;
     }
 
-    .right-login {
-        width: 100%;
-        height: auto;
-    }
-
-    .left-login-image {
-        width: 50vw;
-    }
-
-    .card-login {
+    .card-dadoscompras {
         width: 90%;
     }
 }
