--- a/Assets/CSS/sobrenos.css
+++ b/Assets/CSS/sobrenos.css
@@ -144,7 +144,7 @@ main{
 }
 
 .h1-quemsomos{
-    background-color: #3d2b63;
+    background-color: #3d2b63b7;
     width: 80%;
     height: 160%;
     border-radius: 20%;
@@ -158,7 +158,7 @@ main{
 .diferenciais {
     position: relative;
     top: 184px;
-    background-color: #3d2b63;
+    background-color: #3d2b63b6;
     width: 80%;
     height: 130%;
     border-radius: 20%;
@@ -167,7 +167,7 @@ main{
 }
 
 .nossa-missao {
-    background-color: #3d2b63;
+    background-color: #3d2b63b4;
     width: 80%;
     height: 160%;
     border-radius: 20%;
