--- a/Assets/CSS/pag-planos.css
+++ b/Assets/CSS/pag-planos.css
@@ -112,10 +112,10 @@ main{
 .botao-body {
     border: none;
     position: relative;
-    text-align: center;
-    top: 35%;
     border-radius: 10px;
+    top: 8rem;
     padding: 15px;
+    width: 60%;
     padding-left: 100px;
     background-color: rgb(0, 255, 136);
     cursor: pointer;
@@ -127,21 +127,11 @@ main{
 }
 
 /* Estilos do texto dentro dos botões */
-.botao-body > div > h3{
+.botao-body > h3{
     color: black;
-    position: relative;
-    right: 45px;
-    display: flex;
-    padding-inline: 10px;
+    position: relative; 
+    right: 37px;
     font-size: 20px;
-}
-
-/* Estilos para o a dentro do botão */
-.botao-body a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    color: inherit;
 }
 
 /* Estilos do título 'Plano Básico', 'Plano Padrão', 'Plano Premium' */
@@ -151,9 +141,10 @@ h2 {
 
 /* Estilos para a seção de planos */
 .secao4-div {
+    gap: 30px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
     padding: 160px;
     text-align: center;
     width: 78%;
@@ -163,11 +154,9 @@ h2 {
 /* Estilos para os cards de planos */
 .secao4-div-card {
     position: relative;
+    text-align: center;
     top: 100px;
     left: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: calc(100% / 3 - 60px);
     margin: 10px;
     padding: 20px;
