--- a/Assets/CSS/login.css
+++ b/Assets/CSS/login.css
@@ -248,15 +248,77 @@ footer > h2 {
     font-size: 20px;
 }
 
+@media only screen and (min-width: 1000px) {
+    .logo {
+        display: none;
+    }
+}
+
 /* Media query para telas menores que 950px */
 @media only screen and (max-width: 950px) {
+
     .card-login {
         width: 85%;
+    }
+
+    header {
+        padding: 15px 20px; 
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .nav-itens {
+        flex-direction: column; 
+        align-items: center;
+        margin-top: 15px; 
+    }
+
+    #busca {
+        width: 80%; 
+    }
+
+    footer {
+        padding: 10px 20px; 
+    }
+
+    footer > h2 {
+        font-size: 18px; 
     }
 }
 
 /* Media query para telas menores que 600px */
 @media only screen and (max-width: 600px) {
+
+    .logo {
+        display: none;
+    }
+
+    #busca {
+        width: 70%;
+        padding-right: 30px;
+    }
+
+    .lupa-img {
+        width: 20px;
+    }
+
+    .nav-itens {
+        display: flex;
+    }
+
+    .cadastro,
+    .login {
+        padding: 10px 15px;
+        font-size: 14px;
+        width: auto;
+        height: auto;
+    }
+
+    #busca::placeholder {
+        font-size: 12px;
+    }
     
     .login-principal {
         flex-direction: column;
@@ -282,5 +344,13 @@ footer > h2 {
 
     .card-login {
         width: 90%;
+    }
+
+    footer {
+        height: auto;
+    }
+
+    footer > h2 {
+        font-size: 18px; 
     }
 }
