--- a/Assets/CSS/cadastro.css
+++ b/Assets/CSS/cadastro.css
@@ -10,42 +10,49 @@
 
 /* Configurações gerais do corpo da página */
 body {
-    background: #201b2c;
+    overflow-x: hidden;
     width: 100vw;
     height: 100vh;
-    overflow-x: hidden;
+    background: #201b2c;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Estilos do cabeçalho */
 header {
-    width: 100%;
+    color: aliceblue;
     display: flex;
-    padding: 15px 50px;
-    background-color: #00ff88;
+    padding: 15px;
     background: linear-gradient(42deg, #00FF88 2%, #00a85a 10%, #2e263f 42%);
     justify-content: space-between;
-    box-sizing: border-box;
-    color: aliceblue;
-    font-family: 'Poppins', sans-serif;
+    align-items: center;
 }
 
 /* Estilos do logo */
 .logo {
     position: relative;
-    left: 110px;
+    left: 150px;
 }
 
 /* Estilos da barra de navegação */
 nav {
     display: flex;
     font-weight: bold;
-    align-items: center;
     color: #202020;
+    align-items: center;
 }
 
-/* Estilos dos itens de navegação */
 .nav-itens {
     list-style: none;
+    display: flex;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.btn {
     display: flex;
 }
 
@@ -61,16 +68,14 @@ nav {
     font-weight: bold;
     cursor: pointer;
     opacity: 0.8;
+    margin-left: 10px;
 }
 
 /* Estilos do campo de busca */
 #busca {
-    display: inline;
-    margin-left: 15px;
     outline: none;
     border-radius: 5px;
     padding: 10px;
-    padding-right: 10px;
     background-color: #202020;
     color: white;
     border: none;
@@ -107,91 +112,77 @@ a:hover {
     top: 10px;
 }
 
-main{
-    font-family: 'Roboto', sans-serif;
+main {
+    background-color: #201b2c;
+    padding: 10px;
+    min-height: 100vh;
 }
-
 
 /* Container para o conteúdo do cadastro */
 .movimentar {
     display: flex;
     flex-direction: column;
-    width: 100vw;
-    height: 100vh;
     justify-content: center;
     align-items: center;
 }
 
 /* Lado esquerdo do cadastro */
 .left-cadastro {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
 }
 
 .left-cadastro > h1 {
-    font-size: 1.5vw;
+    font-size: 24px;
     color: white;
 }
 
 /* Lado direito do cadastro */
 .right-cadastro {
-    width: 50vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 9px;
+    width: 30%;
+    padding: 20px;
 }
 
-/* Cartão de login */
+/* Cartão de cadastro */
 .card-cadastro {
-    width: 60%;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    padding: 30px 35px;
+    width: 100%;
     background: #2f2841;
     border-radius: 20px;
     box-shadow: 0 10px 40px #00000056;
+    padding: 30px;
+    text-align: left;
 }
 
 .card-cadastro > h1 {
+    margin-bottom: 20px;
+    text-align: center;
     color: #00ff88;
     font-weight: 800;
-    margin: 0;
 }
 
 /* Campos de texto */
 .campodetexto {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    margin: 10px 0;
+    margin-bottom: 20px;
 }
 
 .campodetexto > input {
+    margin-top: 10px;
     width: 100%;
     border: none;
     border-radius: 10px;
     padding: 15px;
     background: #514869;
     color: #f0ffffde;
-    font-size: 12pt;
+    font-size: 14px;
     box-shadow: 0 10px 40px #00000056;
     outline: none;
     box-sizing: border-box;
 }
 
 .campodetexto > label {
-    color: #f0ffffde;
-    margin-bottom: 10px;
+    color: white;
 }
 
 .campodetexto > input::placeholder {
@@ -199,16 +190,15 @@ main{
 }
 
 .campodetexto > p {
+    text-align: center;
     color: white;
-    margin: auto;
-    padding: 20px 1px 1px;
-    position: relative;
+    margin-top: 10px;
 }
 
 /* Botão de Envio */
-.cor-entre-login, .btn-cadastro {
-    width: 100%;
-    padding: 10px;
+.btn-cadastro {
+    width: 90%;
+    padding: 12px;
     border: none;
     border-radius: 8px;
     outline: none;
@@ -218,63 +208,172 @@ main{
     background: #00ff88;
     cursor: pointer;
     box-shadow: 0 10px 40px -12px #00ff8052;
-}
-
-.cor-entre-login {
-    margin-left: 2px;
-    text-decoration: none;
     color: #202020;
+    text-decoration: none;
 }
 
 /* Opções de aceitação de termos */
 .check {
-    position: relative;
-    left: 30px;
     display: flex;
-    flex-direction: row;
+    align-items: center;
     gap: 10px;
     color: #f0ffffde;
 }
 
 .cor-entre {
-    margin-left: 2px;
     text-decoration: none;
     color: #00ff88;
 }
 
 /* Rodapé (footer) */
 footer {
-    font-family: 'Roboto', sans-serif;
-    position: relative;
-    width: 100%;
     text-align: center;
-    padding: 20px 50px;
+    padding: 20px 0;
     background: linear-gradient(42deg, #00FF88 2%, #00a85a 10%, #2e263f 42%);
-    box-sizing: border-box;
     color: aliceblue;
 }
 
-footer > h2 {
-    font-size: 20px;
-}
-
-@media only screen and (max-width: 950px) {
-    .card-cadastro {
-        width: 85%;
+/* Media query para tablets com largura máxima de 768px */
+@media only screen and (max-width: 768px) {
+    header {
+        padding: 10px;
     }
-}
 
-@media only screen and (max-width: 600px) {
-    .login-principal {
+    .logo {
+        display: none;
+    }
+
+    .nav-itens {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-itens li {
+        margin-bottom: 10px;
+    }
+
+    .btn {
+        margin-top: 10px;
+    }
+
+    .lupa-img {
+        top: 5px;
+    }
+
+    main {
+        font-size: 14px;
+    }
+
+    .left-cadastro > h1 {
+        font-size: 24px;
     }
 
     .right-cadastro {
         width: 100%;
         height: auto;
     }
-    
+
     .card-cadastro {
-        width: 90%;
+        width: 100%;
+        padding: 20px;
+    }
+
+    .campodetexto > input {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .campodetexto > label {
+        font-size: 14px;
+    }
+
+    .btn-cadastro {
+        padding: 12px;
+        font-size: 16px;
+    }
+
+    footer {
+        width: auto;
+        padding: 5px;
+    }
+}
+
+/* Media query para celulares com largura máxima de 600px */
+@media only screen and (max-width: 600px) {
+    header {
+        padding: 10px;
+        width: 100vw;
+    }
+
+    .btn {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #busca {
+        padding-right: 1px;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .lupa-img {
+        top: 2px;
+    }
+
+    .nav-itens {
+        display: none;
+    }
+
+    .btn {
+        display: flex;
+        margin-top: 10px;
+    }
+
+    main {
+        font-size: 12px;
+    }
+
+    .left-cadastro > h1 {
+        font-size: 12px;
+    }
+
+    .right-cadastro {
+        width: 100%;
+        height: auto;
+    }
+
+    .card-cadastro {
+        width: 100%;
+        padding: 15px;
+        height: 90%;
+    }
+
+    .card-cadastro > h1 {
+        text-align: center;
+    }
+
+    .campodetexto > input {
+        padding: 8px;
+    }
+
+    .campodetexto > label {
+        font-size: 12px;
+    }
+
+    .btn-cadastro {
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    footer {
+        height: auto;
+        width: auto;
+        padding: 5px;
+    }
+
+    footer > h2 {
+        font-size: 14px;
     }
 }
