--- a/Assets/CSS/dados-compra2.css
+++ b/Assets/CSS/dados-compra2.css
@@ -52,6 +52,8 @@ nav {
 
 .btn {
     display: flex;
+    flex-wrap: wrap;
+    margin-right: 15px;
 }
 
 /* Estilos dos botões de cadastro e login */
@@ -258,26 +260,14 @@ footer>h2 {
 
 
 /* Media query para tablets com largura máxima de 768px */
-@media only screen and (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1024px) {
+    
     header {
         box-sizing: border-box;
     }
 
     .logo {
         display: none;
-    }
-
-    .nav-itens {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .nav-itens li {
-        margin-bottom: 10px;
-    }
-
-    .btn {
-        margin-top: 10px;
     }
 
     .lupa-img {
