--- a/Assets/CSS/feedback.css
+++ b/Assets/CSS/feedback.css
@@ -8,45 +8,54 @@
     box-sizing: border-box;
 }
 
-/* Estilos gerais do corpo da página */
+/* Configurações gerais do corpo da página */
 body {
-    height: 100vh;
-    width: 100%;
-    background: #201b2c;
     overflow-x: hidden;
+    width: 100vw;
+    height: 100vh;
+    background: #201b2c;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Estilos do cabeçalho */
 header {
-    width: 100%;
+    color: aliceblue;
     display: flex;
-    padding: 15px 50px;
-    background-color: #00ff88;
+    padding: 15px;
     background: linear-gradient(42deg, #00FF88 2%, #00a85a 10%, #2e263f 42%);
     justify-content: space-between;
-    box-sizing: border-box;
-    color: aliceblue;
-    font-family: 'Poppins', sans-serif;
+    align-items: center;
 }
 
 /* Estilos do logo */
 .logo {
     position: relative;
-    left: 110px;
+    left: 150px;
 }
 
 /* Estilos da barra de navegação */
 nav {
     display: flex;
     font-weight: bold;
-    align-items: center;
     color: #202020;
+    align-items: center;
 }
 
-/* Estilos dos itens de navegação */
 .nav-itens {
     list-style: none;
     display: flex;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.btn {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 15px;
 }
 
 /* Estilos dos botões de cadastro e login */
@@ -61,16 +70,14 @@ nav {
     font-weight: bold;
     cursor: pointer;
     opacity: 0.8;
+    margin-left: 10px;
 }
 
 /* Estilos do campo de busca */
 #busca {
-    display: inline;
-    margin-left: 15px;
     outline: none;
     border-radius: 5px;
     padding: 10px;
-    padding-right: 10px;
     background-color: #202020;
     color: white;
     border: none;
@@ -107,8 +114,11 @@ a:hover {
     top: 10px;
 }
 
-main{
-    font-family: 'Roboto', sans-serif;
+main {
+    background-color: #201b2c;
+    color: white;
+    font-size: 16px;
+    min-height: 100vh;
 }
 
 /* Estilos do título 'Feedback' */
@@ -120,25 +130,16 @@ main{
 
 /* Estilos da seção de avaliação */
 .avaliacao {
-    position: absolute;
-    top: 50px;
-    transform: translate(120%, 15%);
     display: flex;
+    position: absolute;
+    transform: translate(120%, 25%);
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 100px 150px;
+    padding: 100px;
     background: #2f2841;
     width: 30%;
     border-radius: 15px;
-}
-
-/* Estilos da pontuação da avaliação */
-#rating {
-    color: white;
-    position: relative;
-    right: -10px;
-    bottom: -4px;
 }
 
 /* Estilos das estrelas de avaliação */
@@ -146,6 +147,11 @@ main{
     margin-top: 20px;
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+
+#rating {
+    margin-left: 4px;
 }
 
 /* Estilos dos campos de entrada de texto */
@@ -186,7 +192,6 @@ main{
 footer {
     font-family: 'Roboto', sans-serif;
     position: relative;
-    top: 850px;
     width: 100vw;
     text-align: center;
     padding: 20px 50px;
@@ -201,20 +206,143 @@ footer>h2 {
     font-size: 20px;
 }
 
-/* Estilos para dispositivos com largura máxima de 950px */
-@media only screen and (max-width: 950px) {
-    div {
-        width: 100%;
+/* Media query para tablets com largura máxima de 768px */
+@media (min-width: 768px) and (max-width: 1024px) {
+    #nome, #email, #mensagem {
+        width: auto;
+        height: auto;
+    }
+
+    header {
+        box-sizing: border-box;
+    }
+
+    a {
+        margin-left: 0;
+    }
+
+    button {
+        flex-wrap: wrap;
+        width: auto;
+        font-size: 1px;
+    }
+
+    .btn {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #busca {
+        display: flex;
+    }
+
+    .tamanho-logo {
+        display: flex;
+        width: 100px;
+        position: relative;
+        right: 150px;
+    }
+
+    .lupa-img {
+        display: none;
+    }
+
+    .nav-itens {
+        display: none;
+    }
+
+    main {
+        font-size: 12px;
+    }
+
+    .btn-javascript {
+        width: 50%;
+    }
+
+    .avaliacao {
+        position: absolute;
+        transform: translate(80%, 20%);
+        width: auto;
+        height: auto;
+    }
+
+    footer {
+        margin-top: 200px;
+        height: auto;
+        width: auto;
+    }
+    
+    footer > h2 {
+        font-size: 14px;
     }
 }
 
 /* Estilos para dispositivos com largura máxima de 600px */
 @media only screen and (max-width: 600px) {
-    body {
+    #nome, #email, #mensagem {
+        width: auto;
+        height: auto;
+    }
+
+    header {
         box-sizing: border-box;
     }
 
-    div>input {
-        width: 200%;
+    a {
+        margin-left: 0;
+    }
+
+    button {
+        flex-wrap: wrap;
+        width: auto;
+        font-size: 1px;
+    }
+
+    .btn {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #busca {
+        display: none;
+    }
+
+    .tamanho-logo {
+        display: flex;
+        width: 100px;
+        position: relative;
+        right: 150px;
+    }
+
+    .lupa-img {
+        display: none;
+    }
+
+    .nav-itens {
+        display: none;
+    }
+
+    main {
+        font-size: 12px;
+    }
+
+    .btn-javascript {
+        width: 100%;
+    }
+
+    .avaliacao {
+        position: absolute;
+        transform: translate(10%, 20%);
+        width: 80%;
+        height: auto;
+    }
+
+    footer {
+        height: auto;
+        width: auto;
+    }
+    
+    footer > h2 {
+        font-size: 14px;
     }
 }
