--- a/Assets/CSS/login.css
+++ b/Assets/CSS/login.css
@@ -55,6 +55,7 @@ nav {
 .btn {
     display: flex;
     flex-wrap: wrap;
+    margin-right: 15px;
 }
 
 /* Estilos dos botões de cadastro e login */
