--- a/Assets/CSS/sobrenos.css
+++ b/Assets/CSS/sobrenos.css
@@ -1,51 +1,61 @@
 /* Importando a fonte */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap');
 
-/* Reset de estilos para todos os elementos */
+/* Reset CSS padrão e configurações globais */
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-/* Estilos gerais do corpo da página */
+/* Configurações gerais do corpo da página */
 body {
-    height: 100vh;
-    width: 100vw;
     overflow-x: hidden;
-    background-color: black;
+    width: 100vw;
+    height: 100vh;
+    background: #201b2c;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Estilos do cabeçalho */
 header {
-    width: 100%;
+    color: aliceblue;
     display: flex;
-    padding: 15px 50px;
-    background-color: #00ff88;
+    padding: 15px;
     background: linear-gradient(42deg, #00FF88 2%, #00a85a 10%, #2e263f 42%);
     justify-content: space-between;
-    box-sizing: border-box;
-    color: aliceblue;
-    font-family: 'Poppins', sans-serif;
+    align-items: center;
 }
 
 /* Estilos do logo */
 .logo {
     position: relative;
-    left: 110px;
+    left: 150px;
 }
 
 /* Estilos da barra de navegação */
 nav {
     display: flex;
     font-weight: bold;
-    align-items: center;
     color: #202020;
+    align-items: center;
 }
 
-/* Estilos dos itens de navegação */
 .nav-itens {
     list-style: none;
     display: flex;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.btn {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 15px;
 }
 
 /* Estilos dos botões de cadastro e login */
@@ -60,16 +70,14 @@ nav {
     font-weight: bold;
     cursor: pointer;
     opacity: 0.8;
+    margin-left: 10px;
 }
 
 /* Estilos do campo de busca */
 #busca {
-    display: inline;
-    margin-left: 15px;
     outline: none;
     border-radius: 5px;
     padding: 10px;
-    padding-right: 10px;
     background-color: #202020;
     color: white;
     border: none;
@@ -106,8 +114,11 @@ a:hover {
     top: 10px;
 }
 
-main{
-    font-family: 'Roboto', sans-serif;
+main {
+    background-color: #201b2c;
+    color: white;
+    font-size: 16px;
+    min-height: 100vh;
 }
 
 /* Estilos do container do banner */
@@ -178,10 +189,15 @@ main{
     right: 40px;
 }
 
+.nossa-missao > h2 {
+    font-size: 25px;
+}
+
 .diferenciais > ul {
     position: relative;
     top: 100px;
     left: 90px;
+    font-size: 25px;
 }
 
 .h1-quemsomos > h1 {
@@ -202,4 +218,113 @@ footer {
 
 footer>h2 {
     font-size: 20px;
+}
+
+@media (max-width: 768px) and (max-width: 1024px){
+    
+    header {
+        box-sizing: border-box;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .lupa-img {
+        display: none;
+    }
+
+    .img-figure {
+       width: 100vw;
+       height: 100vh;
+       object-fit: cover;
+    }
+
+    .h1-quemsomos {
+        width: 90%;
+        height: 70%;
+    }
+
+    .diferenciais {
+        width: 90%;
+        height: 70%;
+    }
+
+    .nossa-missao {
+        width: 90%;
+        height: 90%;
+    }
+
+    .h1-quemsomos > h1{
+        font-size: 20px;
+    }
+    
+    main {
+        font-size: 14px;
+    }
+
+    footer {
+        width: auto;
+        padding: 5px;
+    }
+
+}
+
+
+@media only screen and (max-width: 600px) {
+    
+    header {
+        box-sizing: border-box;
+    }
+
+    .btn {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    #busca {
+        padding-right: 1px;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .lupa-img {
+        top: 2px;
+    }
+
+    .nav-itens {
+        display: none;
+    }
+
+    main {
+        font-size: 12px;
+    }
+
+    .img-figure {
+        height: auto;
+        width: auto;
+    }
+
+    .h1-quemsomos {
+        width: 50%;
+        height: 50%;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    footer {
+        height: auto;
+        width: auto;
+    }
+    
+    footer > h2 {
+        font-size: 14px;
+    }
+
+
 }
